# information_system_design_django

./: README.md  database  manage.py  pyproject.toml
firma/: admin.py  forms.py  models.py  urls.py  views.py
firma/migrations/: 0001_initial.py  0002_alter_client_pasport_alter_client_phone_number.py
firma/templates/firma/: client_form.html  clients.html  index.html  shablon_form.html
firma/templatetags/: custom_filters.py
information_systems_design_django/: asgi.py  settings.py  urls.py  views.py  wsgi.py
information_systems_design_django/templates/information_systems_design_django/: index.html
purchases/: admin.py  forms.py  models.py  urls.py  views.py
purchases/migrations/: 0001_initial.py
purchases/templates/purchases/: index.html  voucher_form.html  voucher_list.html  voucheroffer_form.html  voucheroffer_list.html
static/css/: style.css
