[tool.poetry]
name = "information-systems-design-django"
version = "0.1.0"
description = ""
authors = ["MrSergey <mrsergey98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
django = "4.2"
psycopg2-binary = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
